--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- HERO SECTION -->
     <section class="hero section-container">
       <div class="text-box">
-        <h2 class="text-center fs-1 heading">Buy, Sell, and Swap your Gadgets in one place.</h2>
+        <h2 class="text-center heading">Buy, Sell, and Swap your Gadgets in one place.</h2>
         <p class="text-center subtext">Discover the best deals on phones and accessories — all in a trusted marketplace made for you.</p>
       </div>
 
