--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- FEATURES/ABOUT -->
     <section class="section-container features-section">
       <div class="text-box">
-        <h2 class="text-center heading">Irreplaceable offerings for our Customers</h2>
+        <h2 class="text-center heading fs-1">Irreplaceable offerings for our Customers</h2>
       </div>
       <div class="card-container d-flex flex-column flex-md-row align-items-center gap-4 justify-content-between">
         <div class="card">
@@ -147,7 +147,7 @@
     <!-- GADGETS SLIDESHOW SECTION -->
     <section class="section-container gadget-slide-section">
       <div class="text-box">
-        <h2 class="text-center heading">Browse our Gadgets</h2>
+        <h2 class="text-center heading fs-1">Browse our Gadgets</h2>
       </div>
 
       <!-- Phones -->
@@ -390,7 +390,7 @@
     <!-- SELL/SWAP SECTION -->
     <section class="section-container slsw-section">
       <div class="text-box">
-        <h2 class="text-center heading">Want to sell or swap your Phones and Gadgets?</h2>
+        <h2 class="text-center heading fs-1">Want to sell or swap your Phones and Gadgets?</h2>
         <p class="text-center subtext">Reach out to us through our Whatsapp handle with the pictures and description of your gadgets.</p>
       </div>
       <a href="" style="display: block; margin: auto; width: fit-content;">
@@ -410,7 +410,7 @@
       <div class="d-md-flex gap-4 align-items-start">
         <div class="column w-100">
           <div class="text-box m-0">
-            <h2 class="heading text-center text-md-start">Contact Us</h2>
+            <h2 class="heading text-center text-md-start fs-1">Contact Us</h2>
             <p class="subtext text-center text-md-start m-0">If you can't find what you're looking for or you want to make enquiries, send us a message through the Contact Form and we will respond within <span class="time-interval">48 hours.</span></p>
           </div>
 
