--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
         </a>
       </div>
 
-      <nav class="navbar p-0 m-0 col-md-4 p-0">
-        <ul class="d-flex flex-column flex-md-row align-items-md-center gap-4 p-0 m-md-auto">
+      <nav class="navbar p-0 m-0 col-md-4 p-0 d-none d-md-flex">
+        <button class="menu-btn d-md-none m-0 p-0 mb-3 ms-auto bg-transparent">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill=""><path d="M480-424 284-228q-11 11-28 11t-28-11q-11-11-11-28t11-28l196-196-196-196q-11-11-11-28t11-28q11-11 28-11t28 11l196 196 196-196q11-11 28-11t28 11q11 11 11 28t-11 28L536-480l196 196q11 11 11 28t-11 28q-11 11-28 11t-28-11L480-424Z"/></svg>
+        </button>
+        <ul class="d-flex flex-column flex-md-row align-items-center gap-4 p-0 m-auto">
           <li><a href="">FAQ</a></li>
           <li><a href="">Contact Us</a></li>
-          <li class="d-md-none">
+          <li class="d-md-none mt-2">
             <a href="" class="shop-now-link">
               <button class="cta-btn">
                 <span>Shop now</span>
@@ -79,8 +82,13 @@
               </span>
             </button>
           </a>
+          <button class="menu-btn d-md-none p-0 m-0 bg-transparent">
+            <span class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill=""><path d="M160-240q-17 0-28.5-11.5T120-280q0-17 11.5-28.5T160-320h640q17 0 28.5 11.5T840-280q0 17-11.5 28.5T800-240H160Zm0-200q-17 0-28.5-11.5T120-480q0-17 11.5-28.5T160-520h640q17 0 28.5 11.5T840-480q0 17-11.5 28.5T800-440H160Zm0-200q-17 0-28.5-11.5T120-680q0-17 11.5-28.5T160-720h640q17 0 28.5 11.5T840-680q0 17-11.5 28.5T800-640H160Z"/></svg>
+            </span>
+          </button>
         </nav>
-      </div>
+      </div> 
     </header>
 
     <!-- HERO SECTION -->
@@ -94,7 +102,7 @@
       <form class="search-form">
         <div class="search-bar position-relative p-0 m-0 overflow-hidden">
           <input type="text" class="form-control w-100 pe-5" placeholder="Search gadgets" />
-          <button type="submit" class="position-absolute end-0 top-0 bottom-0 search-btn">
+          <button type="submit" class="position-absolute end-0 top-0 bottom-0 search-btn d-flex align-items-center justify-content-center">
             <span class="icon">
               <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="">
                 <path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
@@ -124,7 +132,7 @@
     <!-- FEATURES/ABOUT -->
     <section class="section-container features-section">
       <div class="text-box">
-        <h2 class="text-center heading">Irreplaceable offerings for our customers</h2>
+        <h2 class="text-center heading">Special offers that serve your interest</h2>
       </div>
       <div class="card-container d-flex flex-column flex-md-row align-items-center gap-4 justify-content-between">
         <div class="card">
@@ -396,7 +404,7 @@
       <a href="" style="display: block; margin: auto; width: fit-content;">
         <button type="button" class="d-flex align-items-center gap-2 connect-btn">
           <span class="icon mb-1">
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="17px" height="17px">
               <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z" />
             </svg>
           </span>
