--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="search-bar position-relative p-0 m-0 overflow-hidden">
           <input type="text" class="form-control w-100 pe-5" placeholder="Search gadgets" />
           <button type="submit" class="position-absolute end-0 top-0 bottom-0 search-btn d-flex align-items-center justify-content-center">
-            <span class="icon">
+            <span class="icon mb-1">
               <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="">
                 <path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
               </svg>
@@ -132,7 +132,7 @@
     <!-- FEATURES/ABOUT -->
     <section class="section-container features-section">
       <div class="text-box">
-        <h2 class="text-center heading">Special offers that serve your interest</h2>
+        <h2 class="text-center heading">Special offers made to serve your interest</h2>
       </div>
       <div class="card-container d-flex flex-column flex-md-row align-items-center gap-4 justify-content-between">
         <div class="card">
